--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@ img {
 }
 
 body {
+    background-color:rgb(210,225,25);
     text-align: center;
     font-family: Arial;
+}
+
+h1{
+    color:white;
 }
