--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,21 @@ img {
 }
 
 body {
-    background-color:rgb(210,225,25);
+    background-color: #000000;
+    padding: 0px;
+    margin: 0px;
     text-align: center;
     font-family: Arial;
 }
 
 h1{
     color:white;
+}
+
+#gradient
+{
+  width: 100%;
+  height: 800px;
+  padding: 0px;
+  margin: 0px;
 }
