--- a/that_was_easy/styles.css
+++ b/that_was_easy/styles.css
@@ -7,3 +7,13 @@
   font-size:50px;
   color:white;
 }
+
+#button{
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  border-color:black;
+  background-color:black;
+  font-size:10px;
+  color:white;
+}
