--- a/button_game/styles.css
+++ b/button_game/styles.css
@@ -14,3 +14,9 @@ h1{
     background:transparent;
     border-color:transparent;
 }
+
+#incI,#incM{
+    width: 100px;
+    height: 20px;
+    background:rgb(255,234,12);
+}
