--- a/gibs/styles.css
+++ b/gibs/styles.css
@@ -17,7 +17,7 @@ h1 {
 
 .slide {
     position: absolute;
-    top: 0%;
+    top: 0;
     bottom: 0;
     left: 0;
     right: 0;
@@ -35,7 +35,7 @@ h1 {
 }
 
 #bottom {
-    font-size: 15px;
+    font-size: 20px;
     position: absolute;
     text-align: center;
     bottom: 2.5%;
