--- a/misc/portfolio_test/css/style.css
+++ b/misc/portfolio_test/css/style.css
@@ -2,15 +2,15 @@
   height:100vh;
 }
 
-#first-page{
+#page-first{
   background-color:rgb(200,100,100);
 }
 
-#second-page{
+#page-second{
   background-color:rgb(100,150,100);
 }
 
-#third-page{
+#page-third{
   background-color:rgb(100,150,200);
 }
 
