--- a/misc/portfolio_test/css/style.css
+++ b/misc/portfolio_test/css/style.css
@@ -2,34 +2,89 @@ body{
     width: 100%;
     height: 100%;
 }
-
 html{
     width: 100%;
     height: 100%;
 }
 
+/*Navbar*/
+.navbar-custom{
+	background-color: #2C2C2C;
+	border-color: transparent;
+}
+.navbar-custom .navbar-brand{
+	color: #00c07f;
+	font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,sans-serif
+}
+.navbar-custom .navbar-brand.active,.navbar-custom .navbar-brand:active,.navbar-custom .navbar-brand:focus,.navbar-custom .navbar-brand:hover{
+	color:#00c07f
+}
+.navbar-custom .nav li a,.navbar-custom .navbar-toggle{
+	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+	color: #ffffff;
+	text-transform: uppercase
+}
+.navbar-custom .navbar-collapse{
+	border-color: #5C5C5C
+}
+.navbar-custom .navbar-toggle{
+	background-color: #00c07f;
+	border-color: #2C2C2C;
+	font-size: 12px
+}
+.navbar-custom .navbar-toggle:focus,.navbar-custom .navbar-toggle:hover{
+	background-color: #00c07f
+}
+.navbar-custom .nav li a{
+	letter-spacing: 1px
+}
+.navbar-custom .nav li a:focus,.navbar-custom .nav li a:hover{
+	color: #00c07f;
+	outline: 0
+}
+.navbar-custom .navbar-nav>.active>a{
+	color: #ffffff;
+	background-color: #00c07f
+}
+.navbar-custom .navbar-nav>.active>a:focus,.navbar-custom .navbar-nav>.active>a:hover{
+	color: #ffffff;
+	background-color: #00c07f
+}
 @media(min-width:767px){
-    .navbar {
+    .navbar-custom{
+    	background-color: transparent;
         padding: 20px 0;
         -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
     }
-
     .top-nav-collapse{
         padding: 0;
+        background-color: #2c2c2c; 
     }
 }
 
+/*Pages*/
 .page{
 	height: 100vh;
 	padding-top: 10%;
 	text-align: center;
 }
 
-#page-intro{
-	padding-top: 15%;
-	background: #fff
+
+.page-intro{
+	padding-top: 20%;
+	background: #fff;
+}
+#intro-title{
+	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+	color: #ffffff;
+	font-size: 80px;
+}
+#intro-heading{
+	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+	color: #ffffff;
+	font-size: 20px;
 }
 
 #page-about{
