--- a/misc/portfolio_test/css/style.css
+++ b/misc/portfolio_test/css/style.css
@@ -60,7 +60,7 @@ html{
     }
     .top-nav-collapse{
         padding: 0;
-        background-color: #2c2c2c; 
+        background-color: #2c2c2c;
     }
 }
 
@@ -71,10 +71,9 @@ html{
 	text-align: center;
 }
 
-
 .page-intro{
-	padding-top: 20%;
-	background: #fff;
+	padding-top: 30%;
+	background: #ffffff;
 }
 #intro-title{
 	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
