--- a/misc/portfolio_test/css/style.css
+++ b/misc/portfolio_test/css/style.css
@@ -66,13 +66,16 @@ html{
 
 /*Pages*/
 .page{
-	height: 100vh;
+	min-height: 100%;
+	min-height: 100vh;
 	padding-top: 10%;
+	padding-bottom: 10%;
 	text-align: center;
 }
 
 .page-intro{
-	padding-top: 30%;
+	padding-top: 20%;
+	padding-bottom: 30%;
 	background: #ffffff;
 }
 #intro-title{
@@ -80,10 +83,16 @@ html{
 	color: #ffffff;
 	font-size: 80px;
 }
-#intro-heading{
+#intro-text{
 	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
 	color: #ffffff;
 	font-size: 20px;
+	border-radius: 200px, 200px, 200px, 200px;
+}
+#intro-btn{
+	border-width: 0.8px;
+	background-color: transparent;
+	color: #ffffff;
 }
 
 #page-about{
