--- a/misc/old_site1/styles.css
+++ b/misc/old_site1/styles.css
@@ -3,7 +3,7 @@ img {
 }
 
 body {
-    background-color: #000000;
+    background-color: #FFFFFF;
     padding: 0px;
     margin: 0px;
     text-align: center;
@@ -12,12 +12,4 @@ body {
 
 h1{
     color:white;
-}
-
-#gradient
-{
-  width: 100%;
-  height: 800px;
-  padding: 0px;
-  margin: 0px;
 }
