--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
 /*General*/
+@font-face{
+	font-family: "Helvetica Neue Light";
+	src: url("../fonts/HelveticaNeueLight.ttf");
+}
+@font-face{
+	font-family: "Helvetica Neue Thin";
+	src: url("../fonts/HelveticaNeue-Thin.otf");
+}
+
 body{
     width: 100%;
     height: 100%;
@@ -21,7 +30,6 @@ html{
 	border-style: solid;
 	border-color: #FFFFFF;
 	border-width: 0px;
-	/*margin-top: 30px;*/
 	margin-bottom: 30px;
 }
 .about-picture{
@@ -40,13 +48,13 @@ html{
 }
 .navbar-custom .navbar-brand{
 	color: #FFFFFF;
-	font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,sans-serif
+	font-family: "Helvetica Neue Light",Helvetica,Arial,sans-serif
 }
 .navbar-custom .navbar-brand.active,.navbar-custom .navbar-brand:active,.navbar-custom .navbar-brand:focus,.navbar-custom .navbar-brand:hover{
 	color: #FFFFFF
 }
 .navbar-custom .nav li a,.navbar-custom .navbar-toggle{
-	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+	font-family: "Helvetica Neue Light","Helvetica Neue Thin","Helvetica Neue",Helvetica, sans-serif;
 	color: #FFFFFF;
 	text-transform: uppercase
 }
@@ -104,18 +112,19 @@ html{
 	background: #FFFFFF;
 }
 #intro-title{
-	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+	font-family: "Helvetica Neue Thin","Helvetica Neue Light","Helvetica Neue", Helvetica, sans-serif;
 	color: #FFFFFF;
 	font-size: 100px;
 }
 #intro-text{
-	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+	font-family: "Helvetica Neue Thin","Helvetica Neue Light","Helvetica Neue", Helvetica, sans-serif;
 	color: #FFFFFF;
 	font-size: 30px;
 	border-radius: 200px, 200px, 200px, 200px;
 }
 #intro-btn{
 	font-size: 20px;
+	font-family: "Helvetica Neue Thin", Helvetica, sans-serif;
 	margin-top: 20px;
 	border-width: 0.8px;
 	border-color: #FFFFFF;
@@ -127,6 +136,7 @@ html{
 	font-size: 40px;
 	padding-top: 5%;
 	padding-bottom: 5%;
+	font-family: "Helvetica Neue Thin", Helvetica, sans-serif;
 }
 
 #page-about{
@@ -134,12 +144,14 @@ html{
 }
 
 #about-caption{
+	font-family: "Helvetica Neue Light", Helvetica, sans-serif;
 	padding-left: 5%;
 	padding-right: 5%;
 	font-size: 25px;
 }
 
 #about-text{
+	font-family: "Helvetica Neue Light", Helvetica, sans-serif;
 	padding-left: 10%;
 	padding-right: 10%;
 	font-size: 15px;
@@ -152,6 +164,7 @@ html{
 }
 
 #projects-btn{
+	font-family: "Helvetica Neue Light", Helvetica, sans-serif;
 	font-size: 20px;
 	margin-top: 20px;
 	border-width: 0px;
@@ -172,7 +185,13 @@ html{
 }
 
 #contact-text{
-	font-size: 20px;
+	font-family: "Helvetica Neue Light", Helvetica, sans-serif;
+	font-size: 25px;
+}
+
+#email-text{
+	font-family: "Helvetica Neue Light", Helvetica, sans-serif;
+	font-size: 15px;
 }
 
 footer{
@@ -182,18 +201,19 @@ footer{
 }
 
 #footnotes{
+	font-family: "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 12px;
 	margin-top: 40px;
 	color: #808080;
 }
 
 /*Cards*/
-#page-projects .card-item {
+.card-item {
     margin: 0 0 15px;
     right: 0
 }
 
-#page-projects .card-item .card-link {
+.card-item .card-link {
     display: block;
     position: relative;
     max-width: 400px;
@@ -201,7 +221,7 @@ footer{
     margin: 0 auto;
 }
 
-#page-projects .card-item .card-link .card-hover {
+.card-item .card-link .card-hover {
     background: #00C07F;
     position: absolute;
     width: 100%;
@@ -212,11 +232,11 @@ footer{
     -moz-transition: all ease .5s
 }
 
-#page-projects .card-item .card-link .card-hover:hover {
+.card-item .card-link .card-hover:hover {
     opacity: 0.9;
 }
 
-#page-projects .card-item .card-link .card-hover .card-hover-content {
+.card-item .card-link .card-hover .card-hover-content {
     position: absolute;
     width: 100%;
     height: 20px;
@@ -227,12 +247,13 @@ footer{
     color: #fff
 }
 
-#page-projects .card-item .card-link .card-hover .card-hover-content i{
+.card-item .card-link .card-hover .card-hover-content i{
 	margin-top:-12px
 }
 
-#page-projects .card-item .card-link .card-hover .card-hover-content h3,
-#page-projects .card-item .card-link .card-hover .card-hover-content h4 {
+.card-item .card-link .card-hover .card-hover-content h3,
+.card-item .card-link .card-hover .card-hover-content h4 {
+	font-family: "Helvetica Neue Light", Helvetica, sans-serif;
     margin: 0;
 }
 
