--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,11 @@ html{
         background-color: #2c2c2c;
     }
 }
+#logo{
+	max-width: 27px;
+	margin-right: 5px;
+	padding-bottom: 3px;
+}
 
 /*Pages*/
 .page{
