--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ html{
 }
 
 .section-header{
-	font-size: 40px;
+	font-size: 50px;
 	padding-top: 5%;
 	padding-bottom: 5%;
 	font-family: "Helvetica Neue Thin", Helvetica, sans-serif;
@@ -191,12 +191,13 @@ html{
 
 #contact-text{
 	font-family: "Helvetica Neue Light", Helvetica, sans-serif;
-	font-size: 25px;
+	font-size: 30px;
 }
 
 #email-text{
+	margin-top: 20px;
 	font-family: "Helvetica Neue Light", Helvetica, sans-serif;
-	font-size: 15px;
+	font-size: 20px;
 }
 
 footer{
@@ -273,13 +274,12 @@ footer{
 	border-style: solid;
 	border-width: 0px;
 	border-color: #FFFFFF;
-	min-width: 0px;
-	min-height: 0px;
+	border-radius: 10px;
 	color: #FFFFFF;
 }
 
 .btn-social:hover{
-	color: #6A6A6A;
+	color: #5A5A5A;
 }
 
 .list-inline>li{
