--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,8 @@ html{
 }
 
 #page-intro{
-	padding-top: 230px;
+	padding-top: 250px;
+	padding-top: 30vh;
 	background: transparent;
 	z-index: 2;
 }
@@ -292,7 +293,7 @@ footer{
 	position:absolute; 
 	width: 100%; 
 	height: 100%; 
-	background-color: #229B42; 
+	background-color: #229B22; 
 	background-image: url(""); 
 	background-repeat: no-repeat; 
 	background-size: cover; 
