--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ html{
 }
 
 #page-intro{
-	padding-top: 250px;
+	padding-top: 230px;
 	padding-top: 30vh;
 	background: transparent;
 	z-index: 2;
@@ -292,7 +292,8 @@ footer{
 #particles-js{
 	position:absolute; 
 	width: 100%; 
-	height: 100%; 
+	height: 100%;
+	height: 100vh; 
 	background-color: #229B22; 
 	background-image: url(""); 
 	background-repeat: no-repeat; 
